Bug 73534 - Table row data getting displayed twice after RoundTrip
Summary: Table row data getting displayed twice after RoundTrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Tushar Bende
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-13 07:23 UTC by Tushar Bende
Modified: 2020-07-22 07:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
File for which data is getting repeated twice after RT (32.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-13 07:23 UTC, Tushar Bende
Details
This is the saved file where data repeated can be seen (17.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-01-13 07:26 UTC, Tushar Bende
Details
Original file screenshot (225.68 KB, image/png)
2014-01-14 09:46 UTC, Tushar Bende
Details
Round Triped file Screenshot (246.01 KB, image/png)
2014-01-14 09:47 UTC, Tushar Bende
Details
Orig file header footer screenshot (605.88 KB, image/png)
2014-01-14 12:26 UTC, Tushar Bende
Details
RoundTrip file header footer screenshot (752.35 KB, image/png)
2014-01-14 12:26 UTC, Tushar Bende
Details
tdf73534_changePageStyleTable.odt: minimal test example that still applies (10.82 KB, application/vnd.oasis.opendocument.text)
2020-07-22 07:35 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tushar Bende 2014-01-13 07:23:35 UTC
Created attachment 91923 [details]
File for which data is getting repeated twice after RT

Steps to reproduce:
1. Open the attached file "resume.docx" in LibreOffice
2. Click File -> Save As (Microsoft Word 2007/2010 (.docx))
3. Open in MS Office 2010 and compare with original document
Expected:
1. File should be identical.
Actual:
1. The saved file has many more pages.
2. Table row data getting displayed twice.
Comment 1 Tushar Bende 2014-01-13 07:26:14 UTC
Created attachment 91924 [details]
This is the saved file where data repeated can be seen
Comment 2 Tushar Bende 2014-01-14 09:46:40 UTC
Created attachment 92025 [details]
Original file screenshot
Comment 3 Tushar Bende 2014-01-14 09:47:13 UTC
Created attachment 92026 [details]
Round Triped file Screenshot
Comment 4 Tushar Bende 2014-01-14 12:24:56 UTC
Also because of invalid section break introduction during export header & footer are also getting divided into sections (Header-Section1 Footer-Section1 & Header-Section2 Footer-Section2). 
Refer: attached screenshot "Orig_file_header_footer.png" & "Roundtriped_file_header_footer.png".
Comment 5 Tushar Bende 2014-01-14 12:26:00 UTC
Created attachment 92034 [details]
Orig file header footer screenshot
Comment 6 Tushar Bende 2014-01-14 12:26:28 UTC
Created attachment 92035 [details]
RoundTrip file header footer screenshot
Comment 7 Tushar Bende 2014-01-15 13:01:47 UTC
Pushed code changes for review
https://gerrit.libreoffice.org/7440
Comment 8 Commit Notification 2014-01-22 08:42:17 UTC
Tushar Bende committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=92414c42cdd03d4eda5dbb4fe1a95cfe1ce3e7e9

fdo#73534 : Table row data was getting displayed twice after RT



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 surbhi.tongia 2014-01-24 08:02:03 UTC
Verified on Build :libro-master~2014-01-24_00.29.32_LibreOfficeDev_4.3.0.0.alpha0_Win_x86.
Now table data is not getting display twice.Working fine.
Comment 10 Justin L 2020-07-22 07:35:15 UTC
Created attachment 163395 [details]
tdf73534_changePageStyleTable.odt: minimal test example that still applies

I was tempted to revert this patch, and doing that passes all unit tests. Even this minimal test looks fine as a .docx in LO, but it really messes up MS Word 2003 if a RES_PAGEDESC is written into the table (or whatever is happening without isCellOpen). So I'm adding this message and example file as an example of why the patch still needs to exist.